[package]
name = "rsecret"
version = "0.1.0"
edition = "2021"

[dependencies]
# blockchain
secretrs = { version = "0.1.0-beta.2", features = ["grpc"] }
# cosmwasm-std = { version = "=1.1.11", package = "secret-cosmwasm-std" }
# bip32 = "0.5.1"
bip39 = "2.0.0"

# general
async-trait = "0.1.80"
serde = "1.0.198"
serde_json = { version = "1.0.116" }
nanorand = { version = "0.7.0", features = ["getrandom", "zeroize"] }
derive_more = { version = "1.0.0-beta", default-features = false, features = ["from"] }
regex = "1.10.4"
prost = "0.12.4"
tracing = "0.1.40" 

# crypto
base64 = "0.22.0"
hex = "0.4.3"
hex-literal = "0.4.1"
hkdf = "0.12.4"
sha2 = "0.10.8"
aes-siv = "0.7.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

# errors
anyhow = "1.0.83"
thiserror = "1.0.51"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { version = "0.11.0", features = ["tls", "tls-webpki-roots", "transport"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
color-eyre = "0.6"
regex = "1"
tokio = { version = "1.37", features = ["rt", "sync", "time", "macros"] }
tonic = { version = "0.11.0", features = ["tls", "tls-webpki-roots", "transport"] }

# wasm

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.14", features = ["js"] }
nanorand = { version = "0.7.0", features = ["getrandom", "zeroize"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio = { version = "1.37", features = ["rt", "sync", "time", "macros"] }
tonic-web-wasm-client = "0.5.1"
wasm-bindgen-test = "0.3.42"

[[example]]
name = "client"
path = "examples/client.rs"
