[package]
name = "rsecret"
version = "0.1.0"
edition = "2021"

[dependencies]
# general
tracing = "0.1.40" 
async-trait = "0.1.80"
base64 = "0.22.0"
hex = "0.4.3"
hex-literal = "0.4.1"
regex = "1.10.4"
serde = "1.0.198"
serde_json = { version = "1.0.116" }
prost = "0.12.4"
derive_more = { version = "1.0.0-beta", default-features = false, features = ["from"] }
nanorand = { version = "0.7.0", features = ["getrandom", "zeroize"] }

# crypto
hkdf = "0.12.4"
sha2 = "0.10.8"
aes-siv = "0.7.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

# blockchain
secretrs = { version = "0.1.0-beta.3" }
bip39 = "2.0.0"

# errors
thiserror = "1.0.51"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { version = "0.11.0", features = ["tls", "tls-webpki-roots", "transport"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tonic = { version = "0.11.0", default-features = false, features = ["codegen","prost"] }
tonic-web-wasm-client = "0.5.1"
getrandom = { version = "0.2.14", features = ["js"] }

[dev-dependencies]
tokio = { version = "1.37", features = ["rt", "sync", "time", "macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
color-eyre = "0.6"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.42"
web-sys = { version = "0.3", features = ["console"]}


[[example]]
name = "client"
path = "examples/client.rs"
